--- a/todos/templates/todos/todo_list.html
+++ b/todos/templates/todos/todo_list.html
@@ -13,6 +13,7 @@
             <h1>My Lists</h1>
         </div>
 
+        <a href={% url 'todo_list_create' %} > Create a new list </a>
         <table>
             <thead>
                 <tr>
